--- a/package.json
+++ b/package.json
@@ -18,18 +18,30 @@
     "eslint-plugin-react": "^7.10.0"
   },
   "dependencies": {
+    "autoprefixer": "^9.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
     "history": "^4.7.2",
+    "postcss-calc": "^6.0.1",
+    "postcss-clean": "^1.1.0",
+    "postcss-color-function": "^4.0.1",
+    "postcss-custom-media": "^6.0.0",
+    "postcss-custom-properties": "^7.0.0",
+    "postcss-discard-comments": "^4.0.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.6",
+    "postcss-remove-root": "^0.0.2",
+    "postcss-smart-import": "^0.7.6",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "serve": "^9.3.0",
-    "webpack": "^4.16.1",
+    "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0"
   }
 }
