--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "clear": "rm -rf build/assets/** && rm -f build/serve.json",
     "config:dev": "export NODE_ENV=development && export WEBPACK_MODE=development && cp serve_configs/development.json build/serve.json",
     "webpack:watch": "webpack --config=webpack.config.js --watch",
-    "server:start": "serve ./build"
+    "server:start": "serve ./build",
+    "prettier": "prettier --config .prettierrc.json --write ./src/**/*.js ./external_modules/**/*.js",
+    "lint": "eslint . --ext .js --quiet",
+    "precommit": "pretty-quick --staged && yarn run lint"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
     "eslint": "^5.2.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0"
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
+    "husky": "^0.14.3",
+    "prettier": "^1.13.7",
+    "pretty-quick": "^1.6.0"
   },
   "dependencies": {
     "autoprefixer": "^9.0.1",
