Playground and first example
Playground setup and its navigation, styles, routing, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -91,9 +91,8 @@ Temporary Items
 
 # End of https://www.gitignore.io/api/osx,node
 
-build/assets/*
+build/**
 !build/assets/.keep
-build/pages/*
 !build/pages/.keep
 wallaby.js
 !src/ui/components/Icon
