--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
+    "normalize.css": "^8.0.0",
     "postcss-calc": "^6.0.1",
     "postcss-clean": "^1.1.0",
     "postcss-color-function": "^4.0.1",
