--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "license": "MIT",
   "description": "React app build configuration and design system starter",
   "scripts": {
-    "start": "yarn run clear && yarn run config:dev && env NODE_ENV=development env WEBPACK_MODE=development yarn run webpack:watch",
-    "build": "yarn run clear && yarn run config:prod && env NODE_ENV=production env WEBPACK_MODE=production yarn run webpack:build && yarn run html:index",
-    "clear": "rm -rf build/assets/** && rm -f build/serve.json && rm -f build/now.json && rm -f build/serve.json",
-    "config:dev": "cp serve_configs/development.json build/serve.json",
-    "config:prod": "cp serve_configs/production.json build/now.json",
-    "webpack:watch": "webpack --config=webpack.config.js --watch",
-    "webpack:build": "webpack --config=webpack.config.js",
-    "server:start": "serve ./build",
-    "html:index": "node ./ssr/render-index.js",
+    "start": "serve ./dist",
+    "watch": "yarn run clear && yarn run config:dev && node build --watch",
+    "html": "node build --server",
+    "build": "yarn run clear && yarn run config:prod && node build --production && node build --server",
+    "clear": "rm -rf dist/** && mkdir dist/assets && mkdir dist/pages && mkdir dist/node",
+    "config:dev": "cp serve_configs/development.json dist/serve.json",
+    "config:prod": "cp serve_configs/production.json dist/now.json",
     "prettier": "prettier --config .prettierrc.json --write ./src/**/*.js ./external_modules/**/*.js",
     "lint": "eslint . --ext .js --quiet",
     "test": "jest",
@@ -38,16 +36,16 @@
     "babel-eslint": "^8.2.6",
     "commitizen": "^2.10.1",
     "eslint": "^5.3.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.11.1",
     "husky": "^1.0.0-rc.13",
     "jest": "^23.5.0",
     "prettier": "^1.14.2"
   },
   "dependencies": {
-    "autoprefixer": "^9.1.0",
+    "autoprefixer": "^9.1.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -56,8 +54,10 @@
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
-    "lint-staged": "^7.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "lint-staged": "^7.2.2",
     "lodash.get": "^4.4.2",
+    "minimist": "^1.2.0",
     "normalize.css": "^8.0.0",
     "postcss-calc": "^6.0.1",
     "postcss-clean": "^1.1.0",
@@ -72,7 +72,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "serve": "^9.4.2",
+    "serve": "^9.6.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0"
   }
