Update build process and related scripts

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "description": "React app build configuration and design system starter",
   "scripts": {
     "start": "serve ./dist",
-    "watch": "yarn run clear && yarn run config:dev && node build --watch",
-    "html": "node build --server",
-    "build": "yarn run clear && yarn run config:prod && node build --production && node build --server",
+    "watch": "yarn run clear:assets && node build --watch",
+    "html": "yarn run clear:pages && node build --server",
+    "build": "yarn run clear && node build --production && node build --server",
     "clear": "rm -rf dist/** && mkdir dist/assets && mkdir dist/pages && mkdir dist/node",
-    "config:dev": "cp serve_configs/development.json dist/serve.json",
-    "config:prod": "cp serve_configs/production.json dist/now.json",
+    "clear:assets": "rm -rf dist/assets/**",
+    "clear:pages": "rm -rf dist/pages/**",
+    "clear:node": "rm -rf dist/node/**",
     "prettier": "prettier --config .prettierrc.json --write ./src/**/*.js ./external_modules/**/*.js",
     "lint": "eslint . --ext .js --quiet",
     "test": "jest",
@@ -35,7 +36,7 @@
   "devDependencies": {
     "babel-eslint": "^8.2.6",
     "commitizen": "^2.10.1",
-    "eslint": "^5.3.0",
+    "eslint": "^5.4.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
