--- a/package.json
+++ b/package.json
@@ -35,47 +35,41 @@
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^9.0.0",
-    "commitizen": "^2.10.1",
-    "eslint": "^5.5.0",
+    "babel-eslint": "^10.0.1",
+    "commitizen": "^3.0.2",
+    "eslint": "^5.7.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.0.0-rc.13",
+    "husky": "^1.1.2",
     "jest": "^23.6.0",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.3"
   },
   "dependencies": {
-    "@babel/core": "^7.0.1",
+    "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.1.5",
-    "babel-loader": "^8.0.2",
+    "autoprefixer": "^9.2.0",
+    "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.1.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "lint-staged": "^7.2.2",
+    "lint-staged": "^7.3.0",
     "lodash.get": "^4.4.2",
     "minimist": "^1.2.0",
     "normalize.css": "^8.0.0",
-    "postcss-calc": "^6.0.1",
-    "postcss-clean": "^1.1.0",
-    "postcss-color-function": "^4.0.1",
-    "postcss-custom-media": "^7.0.0",
-    "postcss-custom-properties": "^7.0.0",
-    "postcss-discard-comments": "^4.0.0",
-    "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
-    "postcss-remove-root": "^0.0.2",
+    "postcss-preset-env": "^6.1.1",
     "postcss-smart-import": "^0.7.6",
     "prop-types": "^15.6.2",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "serve": "^10.0.1",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "serve": "^10.0.2",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
