Add Home controller

--- a/serve_configs/now.json
+++ b/serve_configs/now.json
@@ -8,6 +8,10 @@
       {
         "source": "playground/**",
         "destination": "pages/playground.html"
+      },
+      {
+        "source": "/",
+        "destination": "pages/home.html"
       }
     ]
   }
