Do not render css if server, clear target folder when building

--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "description": "React app build configuration and design system starter",
   "scripts": {
     "start": "serve ./dist",
-    "watch": "yarn run clear:assets && node build --watch",
-    "html": "yarn run clear:pages && node build --server",
+    "watch": "node build --watch",
+    "html": "node build --server",
     "build": "yarn run clear && node build --production && node build --server",
-    "clear": "rm -rf dist/** && mkdir dist/assets && mkdir dist/pages && mkdir dist/node",
-    "clear:assets": "rm -rf dist/assets/**",
-    "clear:pages": "rm -rf dist/pages/**",
-    "clear:node": "rm -rf dist/node/**",
+    "clear": "rm -rf dist/**",
     "prettier": "prettier --config .prettierrc.json --write ./src/**/*.js ./external_modules/**/*.js",
     "lint": "eslint . --ext .js --quiet",
     "test": "jest",
@@ -42,6 +39,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "fs-extra": "^7.0.0",
     "husky": "^1.1.2",
     "jest": "^23.6.0",
     "prettier": "^1.14.3"
