--- a/package.json
+++ b/package.json
@@ -34,40 +34,42 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "commitizen": "^3.0.4",
-    "eslint": "^5.7.0",
+    "eslint": "^5.9.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "fs-extra": "^7.0.0",
-    "husky": "^1.1.2",
+    "eslint-plugin-react-hooks": "^0.0.0",
+    "fs-extra": "^7.0.1",
+    "husky": "^1.2.0",
     "jest": "^23.6.0",
-    "prettier": "^1.14.3"
+    "prettier": "^1.15.2"
   },
   "dependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.3.0",
+    "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
     "classnames": "^2.2.6",
-    "css-loader": "^1.0.0",
+    "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "lint-staged": "^7.3.0",
+    "lint-staged": "^8.1.0",
     "lodash.get": "^4.4.2",
+    "lodash.merge": "^4.6.1",
     "minimist": "^1.2.0",
-    "normalize.css": "^8.0.0",
+    "normalize.css": "^8.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.2.0",
+    "postcss-preset-env": "^6.4.0",
     "postcss-smart-import": "^0.7.6",
     "prop-types": "^15.6.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "serve": "^10.0.2",
-    "webpack": "^4.22.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "serve": "^10.1.1",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2"
   }
 }
