--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node build/serve",
     "watch": "node build --watch",
-    "html": "node build --server",
-    "build": "yarn run clear && node build --production && node build --server",
+    "build": "yarn run clear && node build --production",
+    "static": "node build/render.js",
     "clear": "rm -rf dist/**",
     "prettier": "prettier --config .prettierrc.json --write ./src/**/*.js ./external_modules/**/*.js",
     "lint": "eslint . --ext .js --quiet",
@@ -35,6 +35,7 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.4.2",
     "babel-loader": "^8.0.4",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "content-disposition": "^0.5.2",
@@ -51,8 +52,8 @@
     "postcss-smart-import": "^0.7.6",
     "prop-types": "^15.6.2",
     "range-parser": "^1.2.0",
-    "react": "^16.8.0-alpha.0",
-    "react-dom": "^16.8.0-alpha.0",
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
   }
