--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "content-disposition": "^0.5.2",
     "css-loader": "^2.0.0",
     "cssnano": "^4.1.7",
+    "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "lint-staged": "^8.1.0",
     "lodash.get": "^4.4.2",
