--- a/package.json
+++ b/package.json
@@ -17,45 +17,46 @@
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.10.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-react-hooks": "^0.0.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "fs-extra": "^7.0.1",
-    "jest": "^23.6.0",
-    "prettier": "^1.15.3"
+    "jest": "^24.7.1",
+    "prettier": "^1.16.4"
   },
   "dependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.4.2",
-    "babel-loader": "^8.0.4",
-    "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.5",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "classnames": "^2.2.6",
-    "compression": "^1.7.3",
-    "content-disposition": "^0.5.2",
-    "css-loader": "^2.0.0",
-    "cssnano": "^4.1.7",
+    "compression": "^1.7.4",
+    "content-disposition": "^0.5.3",
+    "core-js": "^3.0.1",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
     "file-loader": "^3.0.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "lint-staged": "^8.1.0",
+    "lint-staged": "^8.1.5",
     "lodash.get": "^4.4.2",
     "lodash.merge": "^4.6.1",
     "minimist": "^1.2.0",
     "normalize.css": "^8.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.5.0",
+    "postcss-preset-env": "^6.6.0",
     "postcss-smart-import": "^0.7.6",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "range-parser": "^1.2.0",
-    "react": "^16.8.0-alpha.1",
-    "react-dom": "^16.8.0-alpha.1",
-    "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   }
 }
