--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "env BABEL_ENV=test mocha"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "svelte": "^3.22.2"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "cheap-watch": "^1.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.6.5",
+    "css-loader": "^3.5.3",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -42,5 +44,10 @@
     "terser-webpack-plugin": "^3.0.1",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "browserslist": [
+    "last 2 version",
+    "not dead",
+    "not ie <= 11"
+  ]
 }
